@startuml

skinparam classAttributeIconSize 0

package api.dtos {
    class Transaction << (D, orchid) data >> {
        + from: String
        + to: String
        + amount: Long
        + signature: String
    }
}

package dtos {
    class BlockDTO << (D, orchid) data >> {
        + index: Int
        + timestamp: Long
        + transactions: List<Transaction>
        + previousHash: String
        + hash: String
        + nonce: Long
    }
}

package api.entities.hash {
    object Hash {
        + sha256(input: String): String
    }
}

package api.entities {
    class SignatureCreator << (F, LightBlue) file >> {
        + createSignature(privateKey: PrivateKey, message: String): String
        + verifySignature(publicKey: PublicKey?, message: String, signature: String): Boolean
        + getPublicKeyFromString(keyString: String): PublicKey?
    }
}

package entities.block {
    class Block << (D, orchid) data >> {
        + index: Int
        + timestamp: Long
        + transactions: List<Transaction>
        + previousHash: String
        + hash: String
        + nonce: Long
        + calculateHash(nonceToUse: Long): String
    }

    object BlockMapper {
        + toEntity(dto: BlockDTO): Block
    }

    object BlockMiner {
        + mine(unminedBlock: Block, difficulty: Int): Block
    }
}

package entities.block.rule {
    interface BlockRule {
        + validate(block: Block, difficulty: Int, previousBlock: Block): ValidationResult
    }

    class CompositeBlockRule {
        - rules: List<BlockRule>
        + validate(block: Block, difficulty: Int, previousBlock: Block): ValidationResult
    }

    class ChainLinkRule {
        + validate(block: Block, difficulty: Int, previousBlock: Block): ValidationResult
    }

    class ValidHashRule {
        + validate(block: Block, difficulty: Int, previousBlock: Block): ValidationResult
    }

    class ProofOfWorkRule {
        + validate(block: Block, difficulty: Int, previousBlock: Block): ValidationResult
    }

    class TimestampRule {
        + validate(block: Block, difficulty: Int, previousBlock: Block): ValidationResult
    }

    class BlockValidator {
        - rule: BlockRule
        + validateReceivedBlock(block: Block, difficulty: Int, previousBlock: Block, txValidator: TransactionValidator): ValidationResult
    }

    object BlockValidatorFactory {
        + createDefault(): BlockValidator
        + createWithCustomRules(rules: List<BlockRule>): BlockValidator
    }
}

package api.entities.transaction.rules {
    interface TransactionRule {
        + isValid(transaction: Transaction): Boolean
        + getErrorMessage(): String
    }

    class ValidCryptographicSignatureRule {
        + isValid(transaction: Transaction): Boolean
        + getErrorMessage(): String
    }

    class SignatureNotEmptyRule {
        + isValid(transaction: Transaction): Boolean
        + getErrorMessage(): String
    }
}

package entities.transaction.rules {
    class PositiveAmountRule {
        + isValid(transaction: Transaction): Boolean
        + getErrorMessage(): String
    }
}

package entities.results {
    class ValidationResult << (D, orchid) data >> {
        + isValid: Boolean
        + errorList: List<String>
        + getErrors(): String
        + isSuccess(): Boolean
        + isFailure(): Boolean
    }

    interface OperationResult <<sealed>> {
    }

    class "Success<T>" as OperationSuccess << (D, orchid) data >> {
        + data: T
    }

    class "Failure" as OperationFailure << (D, orchid) data >> {
        + errors: List<String>
        + getErrors(): String
    }
}

package entities.transaction.validator {
    class TransactionValidator {
        - rules: List<TransactionRule>
        + validate(transaction: Transaction): ValidationResult
    }

    object TransactionValidatorFactory {
        + createDefault(): TransactionValidator
        + createWithCustomRules(rules: List<TransactionRule>): TransactionValidator
    }
}

package entities.blockchain {
    class Blockchain {
        + difficulty: Int
        + chain: List<Block>
        + pendingTransactions: List<Transaction>
        + addTransaction(transaction: Transaction): OperationResult<Unit>
        + getLatestBlock(): Block
        + minePendingTransactions(): Block
        + replaceChain(newChain: List<Block>): OperationResult<Unit>
    }

    class Chain {
        + difficulty: Int
        + blocks: List<Block>
        + getLatestBlock(): Block
        + addBlock(block: Block): OperationResult<Unit>
        + isChainValid(chainToValidate: List<Block>): Boolean
        + replaceChain(newChain: List<Block>): OperationResult<Unit>
    }

    class TransactionPool {
        + pendingTransactions: List<Transaction>
        + addTransaction(transaction: Transaction): OperationResult<Unit>
        + extractTransactionsForMining(): List<Transaction>
        + clear()
    }
}

package api.services {
    class ExampleService
}

package api.controllers {
    class ExampleController
}

package api.repositories {
    class ExampleRepository
}

package api.routes {
    class ExampleRouter
}

package api {
    class ExampleServiceApplication

    class ApplicationRunner << (F, LightBlue) file >> {
        + main(args: Array<String>)
    }
}

' Relaciones - Reglas de Bloques
CompositeBlockRule ..|> BlockRule
ChainLinkRule ..|> BlockRule
ValidHashRule ..|> BlockRule
ProofOfWorkRule ..|> BlockRule
TimestampRule ..|> BlockRule
CompositeBlockRule o-- "*" BlockRule : contains
BlockValidator o-- "1" BlockRule : uses
BlockValidatorFactory ..> BlockValidator : creates

' Relaciones - Reglas de Transacciones
PositiveAmountRule ..|> TransactionRule
ValidCryptographicSignatureRule ..|> TransactionRule
SignatureNotEmptyRule ..|> TransactionRule

TransactionValidator o-- "*" TransactionRule : contains
TransactionValidator ..> ValidationResult : returns
TransactionValidatorFactory ..> TransactionValidator : creates

' Dependencias funcionales
ValidCryptographicSignatureRule ..> SignatureCreator : uses functions

' Relaciones de Results (Sealed Interface)
OperationSuccess ..|> OperationResult
OperationFailure ..|> OperationResult

' Relaciones principales del core
Blockchain o-- "1" TransactionPool
Blockchain o-- "1" Chain
Chain o-- "1" BlockValidator
Chain o-- "1" TransactionValidator
TransactionPool o-- "1" TransactionValidator
Blockchain ..> OperationResult : returns
Chain ..> OperationResult : returns
TransactionPool ..> OperationResult : returns

BlockValidator ..> ValidationResult : returns
BlockValidator ..> Block : validates

Chain *-- "*" Block : blocks
Block --> "*" Transaction : contains
BlockDTO --> "*" Transaction : contains
BlockMapper ..> Block : creates
BlockMapper ..> BlockDTO : maps from
BlockMiner ..> Block : creates

@enduml